# gravity-game

./: .gitignore  CMakeLists.txt  a.out  circle.c  circle.h  main.c  point.h
.cache/clangd/index/: main.c.44FD99A82C2549F2.idx
.github/workflows/: cmake.yml
nvidia_sucks_ass/: dlclose_hack.c
src/: control.c  control.h  draw.c  draw.h  gravity_game.c  init.c  init.h  obj.c  obj.h  vect2.c  vect2.h
